seedboxk8s/applications/radarr/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: tortuga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - image: linuxserver/radarr
          name: radarr
          ports:
            - containerPort: 7878
          volumeMounts:
            - mountPath: /config
              name: radarr-config-pvc
              readOnly: false
            - mountPath: /media
              name: seedboxmedia-nfs
              readOnly: false
      volumes:
        - name: import
          emptyDir: {}
        - name: radarr-config-pvc
          persistentVolumeClaim:
            claimName: radarr-config-pvc
        - name: seedboxmedia-nfs
          persistentVolumeClaim:
            claimName: seedboxmedia-nfs-pvc
