seedboxk8s/applications/radarr/StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
  namespace: tortuga
spec:
  replicas: 1
  serviceName: radarr
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radarr
    spec:
      securityContext:
        fsGroup: ${plexGid}
      containers:
        # https://github.com/linuxserver/docker-radarr/releases
        - image: ghcr.io/linuxserver/radarr:6.4.4.10685-ls319
          name: radarr
          ports:
            - containerPort: 7878
          volumeMounts:
            - mountPath: /config
              name: radarr-config-pvc
              readOnly: false
            - mountPath: /media
              name: seedboxmedia-nfs
              readOnly: false
      volumes:
        - name: import
          emptyDir: {}
        - name: radarr-config-pvc
          persistentVolumeClaim:
            claimName: radarr-config-pvc
        - name: seedboxmedia-nfs
          persistentVolumeClaim:
            claimName: seedboxmedia-nfs-pvc
