seedboxk8s/applications/radarr/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: tortuga
spec:
  selector:
    app.kubernetes.io/name: radarr
  ports:
  - protocol: TCP
    port: 80
    targetPort: 7878
