seedboxk8s/applications/radarr/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: tortuga
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Radarr
    gethomepage.dev/group: Media
    gethomepage.dev/icon: radarr
    gethomepage.dev/href: https://radarr.${productionClusterFqdn}
spec:
  ingressClassName: traefik-tailscale
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.${productionClusterFqdn}`)
      kind: Rule
      services:
        - name: radarr
          kind: Service
          port: 80
      middlewares:
        - name: authelia
          namespace: authelia
  tls:
    secretName: seedbox-wildcard-backing-secret
